tests/fixpoint/fixpoint.exp
Error: Fun.js:8
  8: function fix(fold) {
                  ^^^^ parameter `fold`. Missing annotation

Error: Fun.js:19
 19:     return function(n) {
                         ^ parameter `n`. Missing annotation

Error: Fun.js:20
 20:       if (eq (n, 1)) { return 1; }
                   ^ string. This type is incompatible with the expected param type of
  4: function eq(x:number,y:number) { return true };
                   ^^^^^^ number

Error: Fun.js:21
 21:       return mul (factorial (sub (n, 1)), n);
                                       ^ string. This type is incompatible with the expected param type of
  5: function sub(x:number,y:number) { return 0; }
                    ^^^^^^ number

Error: Fun.js:21
 21:       return mul (factorial (sub (n, 1)), n);
                                               ^ string. This type is incompatible with the expected param type of
  6: function mul(x:number,y:number) { return 0; }
                             ^^^^^^ number

Error: Ycombinator.js:4
  4: function Y(f) {
                ^ parameter `f`. Missing annotation

Error: Ycombinator.js:10
 10:   function fix_f(x:number):number { return f(x); }
                                                ^^^^ string. This type is incompatible with the expected return type of
 10:   function fix_f(x:number):number { return f(x); }
                                ^^^^^^ number

Error: Ycombinator.js:10
 10:   function fix_f(x:number):number { return f(x); }
                                                  ^ number. This type is incompatible with the expected param type of
 14:   function fix_f(x:string):string { return f(x); }
                        ^^^^^^ string

Error: Ycombinator.js:14
 14:   function fix_f(x:string):string { return f(x); }
                                                ^^^^ number. This type is incompatible with the expected return type of
 14:   function fix_f(x:string):string { return f(x); }
                                ^^^^^^ string

Error: Ycombinator.js:14
 14:   function fix_f(x:string):string { return f(x); }
                                                  ^ string. This type is incompatible with the expected param type of
 10:   function fix_f(x:number):number { return f(x); }
                        ^^^^^^ number


Found 10 errors
